favicon ico updated

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="https://raw.githubusercontent.com/exjade/cryptoalphaskullz/main/public/image/favicon_io/android-chrome-192x192.png?token=GHSAT0AAAAAABOYFITX5GOLVAKLK25AHWDKYRBI2UA" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CASK</title>
     <link
