--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/*" 
-    href="favicon.ico" />
+    <link rel="icon" href="https://i.imgur.com/0oAKeKn.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CASK</title>
     <link
